<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory App</string>

    <string name="edit_item_label">Detail</string>
    <string name="editor_label_new">Add a Product</string>
    <string name="editor_label_edit">Edit Detail</string>
    <string name="editor_layout_product">Product</string>
    <string name="editor_layout_prodcut_name">Name</string>

    <string name="menu_delete_all">Delete All</string>


    <string name="activity_main_empty_text">No item in inventory \n You can add one by the button</string>

    <string name="editor_layout_quantity">Quantity: </string>
    <string name="editor_quantity_hint">Number</string>
    <string name="editor_price">Price: </string>
    <string name="editor_distributor">Distributor</string>
    <string name="editor_distributor_hint">Email</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>

    <string name="item_quantity_is_zero">Quantity is zero</string>
    <string name="item_sold_out">Sold out!</string>

    <string name="editor_insert_product_failed">Error with inserting product</string>
    <string name="editor_insert_product_successful">Product inserted</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="deleteAll_dialog_msg">Delete All products?</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_distributor_replacer">None</string>

    <string name="order_summary_email_subject" translatable="false">Hello, I want to order <xliff:g id="product" example="MagicScroll">%s</xliff:g></string>
    <string name="editor_product_name_empty">Product name can\'t be empty</string>
    <string name="editor_order_something_empty">Product name or distributor can\'t be empty</string>
    <string name="editor_img_button">Choose a picture</string>
    <string name="item_sold_number">Sold: </string>
    <string name="editor_sold_number">Sold Number</string>
    <string name="edit_sold_number">Sold Number</string>
    <string name="edit_quantity_zero_text">Can\'t be less than 0</string>
</resources>
