<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:orientation="horizontal">

    <LinearLayout
        style="@style/list_item_linearlayout"
        android:layout_weight="2">

        <TextView
            android:id="@+id/item_product_name"
            style="@style/list_item_mainText"
            android:textSize="@dimen/list_item_habitText"
            tools:text="HP Potion" />

    </LinearLayout>

    <LinearLayout
        style="@style/list_item_linearlayout"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:paddingTop="4dp"
            android:orientation="horizontal">

            <TextView
                style="@style/list_item_mainText"
                android:paddingRight="@dimen/list_item_padding"
                android:text="@string/editor_price" />

            <!-- Current quantity -->
            <TextView
                style="@style/list_item_mainText"
                tools:text="16$"
                android:id="@+id/item_product_price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:orientation="horizontal">

            <TextView
                style="@style/list_item_mainText"
                android:paddingRight="@dimen/list_item_padding"
                android:text="@string/editor_layout_quantity" />

            <!-- Current quantity -->
            <TextView
                style="@style/list_item_mainText"
                tools:text="24"
                android:id="@+id/item_product_quantity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <TextView
                style="@style/list_item_mainText"
                android:paddingRight="@dimen/list_item_padding"
                android:text="@string/item_sold_number" />

            <!-- Current quantity -->
            <TextView
                style="@style/list_item_mainText"
                tools:text="5"
                android:id="@+id/item_product_sold_number" />

        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/list_item_button"
        android:focusable="false"
        android:background="@drawable/ic_indeterminate_check_box_24dp"
        android:id="@+id/item_button"/>

</LinearLayout>